test/integration/good/tuples/tuple-complicated-data.stan
data {

  (array[10] real, int) tuple;

  array[3] (int, vector[3]) tuple2;

  (array[2] real, int, array[2] (real, int)) tuple3;

}
