test/integration/bad/data_index/non_data_index4.stan
parameters {
  array[3] real y;
}
transformed parameters {
  matrix[size(y), 2] m;
}
